Fixed Tabs overflow

--- a/assets/styles/filament-components.css
+++ b/assets/styles/filament-components.css
@@ -92,23 +92,6 @@
     border-color: hsl(210,100%,20%);
 }
 
-
-/* Tabs --------------------------------- */
-
-.Tabs {
-    position: relative;
-    height: 32px;
-    margin: 0;
-    padding: 0;
-    font-size: 0;
-    background-image: -webkit-linear-gradient(top, hsl(0,0%,30%), hsl(0,0%,20%) );
-}
-
-
-.Tabs .DocumentTab:first-child {
-    border-top-left-radius: 0;
-}
-
 /* Panel --------------------------------- */
 
 .Panel.Panel--hidden {
