--- a/ui/document-tab.reel/document-tab.css
+++ b/ui/document-tab.reel/document-tab.css
@@ -1,43 +1,85 @@
+/* Tabs --------------------------------- */
+
+/* 
+    TODO: The .Tabs class belongs technically to .main, but it feels disconnected there.
+    Maybe better create a tabs.reel with a tab.reel inside?
+*/
+
+.Tabs {
+    display: -webkit-flex;
+    -webkit-align-items: flex-end;
+    overflow: hidden;
+    position: relative;
+    height: 28px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    background-image: -webkit-linear-gradient(top, hsl(0,0%,30%), hsl(0,0%,20%) );
+}
+
+
+.Tabs .DocumentTab:first-child {
+    border-top-left-radius: 0;
+    margin-left: 0;
+}
+
+
+/* Tab --------------------------------- */
+
 .DocumentTab {
-     display: inline-block;
-     height: 32px;
-     padding: 0 3px 0 8px;
-     margin: 0;
-     line-height: 28px;
-     font-size: 13px;
-     font-weight: normal;
-     text-align: center;
-     color: hsl(0,0%,60%);
-     text-shadow: 0 1px 0 hsla(0,0%,0%,.2);
-     border-radius: 6px 6px 0 0;
-     border: 1px solid;
-     border-color: transparent transparent transparent hsla(0, 0%, 0%, .15);
-     background: hsla(0,0%,100%,0);
-     cursor: pointer;
- }
+    -webkit-flex: 1 1 auto;
+    min-width: 0;
+    max-width: 180px;
+    display: -webkit-flex;
+    -webkit-align-items: center;
+    height: 28px;
+    padding: 0 3px 0 8px;
+    margin: 0 0 0 1px;
+    line-height: 26px;
+    font-size: 11px;
+    font-weight: normal;
+    text-shadow: 0 1px 0 hsla(0,0%,0%,.2);
+    border-radius: 6px 6px 0 0;
+    color: hsla(0,0%,100%,.8);
+    background-color: hsla(0,0%,100%,.2);
+    cursor: pointer;
+    -webkit-transition: background-color .1s;
+}
 
 .DocumentTab:hover {
-    color: hsla(0,0%,100%,.8);
-    border-color: transparent;
-    background: hsla(0,0%,100%,.2);
+    background-color: hsla(0,0%,100%,.25);
 }
 
 .DocumentTab:active,
-.DocumentTab:focus,
+.DocumentTab:focus {
+    background-color: hsla(0,0%,100%,.15);
+    -webkit-transition-duration: .1s;
+}
+
 .DocumentTab.selected {
     color: hsl(0,0%,30%);
     text-shadow: 0 1px 0 hsla(0,0%,100%,.3);
-    border-color: hsla(0,0%,100%,1) transparent hsla(0,0%,0%,.2) transparent;
-    background: -webkit-linear-gradient( hsl(0,0%,98%), hsl(0,0%,94%) );
+    border-top: 1px solid hsla(0,0%,100%,1);
+    border-bottom: 1px solid hsla(0,0%,0%,0.24);
+    background: -webkit-linear-gradient( hsl(0,0%,98%), hsl(0,0%,86%) );
     cursor: default;
+}
+
+
+.DocumentTab .DocumentTab-label {
+    display: block;
+    -webkit-flex: 1 1 auto;
+    min-width: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .DocumentTab .DocumentTab-close {
     width: 20px;
     height: 20px;
-    min-width: 0;
+    min-width: 20px;
     margin-left: 3px;
-    margin-top: -2px;
     line-height: 20px;
     padding: 0;
     border-radius: 10px;
@@ -49,13 +91,13 @@
 }
 
 .DocumentTab .DocumentTab-close:hover {
+    color: inherit;
     background: hsla(0,0%,0%,.1);
 }
 
 .DocumentTab .DocumentTab-close:active {
     background: hsla(0,0%,0%,.3);
 }
-
 
 /* Dirty Document ----------------------- */
 
