--- a/ui/package-explorer.reel/package-explorer.css
+++ b/ui/package-explorer.reel/package-explorer.css
@@ -5,7 +5,7 @@
 
 .PackageExplorer .Panel-title {
     padding: 12px 8px 0 8px;
-    height: 65px;
+    height: 71px;
 }
 
 .PackageExplorer .Panel-title-name {
@@ -14,7 +14,7 @@
     color: hsl(0,0%,30%);
     font-family: Titillium Web, Open Sans, sans-serif;
     font-size: 24px;
-    line-height: 16px;
+    line-height: 20px;
 }
 
 .PackageExplorer .Panel-title-version {
@@ -23,7 +23,7 @@
 }
 
 .PackageExplorer .Panel-shadow {
-    top: 64px;
+    top: 70px;
 }
 
 
